# housemonitor

./: .flake8  .pre-commit-config.yaml  README.md  init_credentials  measure_and_save.sh  pyproject.toml  requirements.txt
analysis/: house.py
housemonitor/: __main__.py  detect_platform_pi.py  measure_and_save.py  measurement.py  pi_get_humtemp.py  save_measurement.py  simulate_get_humtemp.py
tests/: test_measurement.py  test_save_measurement.py
